fix(Button): fix disabled icon button bug in dark mode (#3020)
* fix(Button): fix disabled icon button bug in dark mode

* fix(Button): fix icon color for disabled button

--- a/src/styles/color-modes/dark.less
+++ b/src/styles/color-modes/dark.less
@@ -78,7 +78,7 @@
   --rs-btn-default-active-bg: @B300-dark;
   --rs-btn-default-active-text: @B000-dark;
   --rs-btn-default-disabled-bg: @B600-dark;
-  --rs-btn-default-disabled-text: @B500-dark;
+  --rs-btn-default-disabled-text: @B400-dark;
   --rs-btn-primary-bg: @H700-dark;
   --rs-btn-primary-text: @B000-dark;
   --rs-btn-primary-hover-bg: @H600-dark;
